<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Pi Pocket</string>
	<string name="host_hint">电脑地址，例如 192.168.1.50:8787</string>
	<string name="token_hint">访问令牌（没设置就留空）</string>
	<string name="connect">连接</string>
	<string name="scan">扫描局域网</string>
	<string name="scanning">正在扫描…</string>
	<string name="found_none">没扫到运行中的 Pi Pocket，请确认电脑上已启动且在同一 Wi-Fi</string>
	<string name="bad_address">地址格式不对，应该是 IP:端口</string>
	<string name="connecting">正在连接 %1$s …</string>
	<string name="connect_failed">连不上 %1$s，检查电脑端是否在运行、手机是否同一 Wi-Fi</string>
	<string name="recent">最近使用</string>
	<string name="forget">长按可删除</string>
</resources>
